# v-shader-hackathon

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  index.html  minimal_index.html
shaders/: shader.frag  shader.vert
shadertoy_shaders/: Base_warp_fBM.frag  CineShaderLava.frag  Creation_by_Silexars.frag  Cube_lines.frag  CyberFuji2020.frag  ED-209.frag  Octagrams.frag  Phantom_Star_for_CineShader.frag  RaymarchingPrimitives.frag  Seascape.frag  ShaderArtCodingIntroduction.frag  fractal_pyramid.frag  rotormath.frag  starry_planes.frag
src/: main.rs
tutorial/: shader.frag  tutorial.frag  tutorial.md
