[package]
name = "wasm_shader_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
minwebgl = { version = "0.2" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  'CustomEvent',
  'CustomEventInit',
  'MouseEvent',
  'Element',
  'DomRect'
]}
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"

[profile.release]
lto = true
opt-level = 'z'
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
